fix overflow auto

--- a/css/base/layout.css
+++ b/css/base/layout.css
@@ -6,11 +6,11 @@
 .row {
     max-width: 980px;
     margin: 0 auto 10px auto;
-    overflow: auto;
+    overflow: hidden;
 }
 
 .row .row {
-    margin: 0 -10px;
+    margin: 0 -10px 10px -10px;
 }
 
 .col {
